--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -99,6 +99,7 @@
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
+   margin: 70px 0 0 0;
   }
 
   .about-project__subtitle {
