--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -10,7 +10,6 @@
   padding: 0;
   margin: 0;
   justify-content: center;
- 
 }
 
 .nav__paragraph {
@@ -32,11 +31,28 @@
   color: #FFFFFF;
   font-size: 12px;
   line-height: 16px;
-
-
 }
 
 .nav__link:hover {
   opacity: 0.8;
   cursor: pointer;
+}
+
+@media screen and (max-width: 520px) {
+.nav {
+  margin: 0 0 17px 0;
+}
+
+  .nav__links {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+  }
+
+  .nav__link {
+    width: 82px;
+    font-size: 10px;
+    line-height: 16px;
+  }
+
 }
