--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,6 +9,7 @@
 }
 
 .footer__section {
+  font-weight: 400;
   text-align: center;
   color: #8B8B8B;
   margin: 0 auto 20px auto;
@@ -51,26 +52,26 @@
 
 @media screen and (max-width: 768px) {
   .footer {
-    padding: 79px 10px 10px 10px;
+    padding: 79px 30px 20px 30px;
   }
 }
 
 @media screen and (max-width: 520px) {
   .footer {
-    padding: 79px 30px 20px 30px;
+    padding: 79px 10px 20px 10px;
   }
 
   .footer__section {
     font-size: 12px;
-    line-height: 15px;
+    line-height: 14px;
     padding-bottom: 21px;
-    margin: 0 auto 30px;
+    margin: 0 10px 30px 10px;
   }
 
   .footer__info {
     flex-direction: column-reverse;
     font-size: 12px;
-    line-height: 15px;
+    line-height: 14,52px;
   }
 
   .footer__copyright {
