--- a/src/components/NotFoundPage/NotFoundPage.css
+++ b/src/components/NotFoundPage/NotFoundPage.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   font-style: normal;
   font-weight: normal;
   text-align: center;
@@ -22,6 +23,9 @@
 }
 
 .not-found-page__back {
+  width: 42px;
+  background-color: #202020;
+  border: none;
   font-size: 14px;
   line-height: 17px;
   text-decoration: none;
