--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,12 +1,12 @@
 .footer {
-
   background: #202020;
   padding: 79px 70px 20px 70px;
-  margin: 0 auto;
+  margin: 0;
   font-style: normal;
   font-weight: normal;
   font-size: 13px;
   line-height: 16px;
+  flex-shrink: 0;
 }
 
 .footer__section {
